Optimized dependencies, provided bugfix